--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "description": "Backend für Abschlussarbeiten",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "keywords": [],
   "author": "Lasse",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-busboy": "0.0.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.8"
-  }
+  },
+  "devDependencies": {  
+    "should": "~7.1.0",  
+    "mocha": "~2.3.3",  
+    "supertest": "~1.1.0"  
+  }  
 }
