--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "quizzmaniac",
+  "name": "client",
   "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxyconfig.json",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,42 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.7",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "^4.4.7",
-    "@angular/core": "^4.4.7",
-    "@angular/flex-layout": "^2.0.0-rc.1",
-    "@angular/forms": "^4.4.7",
-    "@angular/http": "^4.4.7",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.4.7",
-    "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/router": "^4.4.7",
-    "core-js": "^2.6.2",
-    "rxjs": "^5.5.12",
-    "zone.js": "^0.8.26"
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.2.0",
+    "unique-filename": "^1.1.1",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "^4.4.7",
-    "@angular/language-service": "^4.4.7",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.0.118",
-    "angular-ide": "^0.9.55",
-    "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "angular-ide": "^0.9.59"
   }
 }
