--- a/server/package.json
+++ b/server/package.json
@@ -7,21 +7,25 @@
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lasse",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-busboy": "0.0.2",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
+    "monk": "*",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
-    "nodemon": "^1.18.8"
+    "nodemon": "^1.18.8",
+    "passport": "*"
   },
-  "devDependencies": {  
-    "should": "~7.1.0",  
-    "mocha": "~2.3.3",  
-    "supertest": "~1.1.0"  
-  }  
+  "devDependencies": {
+    "mocha": "^6.0.2",
+    "should": "~7.1.0",
+    "supertest": "^3.4.2"
+  }
 }
