--- a/client/proxyconfig.json
+++ b/client/proxyconfig.json
@@ -1,7 +1,12 @@
 {
+    "/api/branche/getAll": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true
+  },
   "/api": {
     "target": "http://localhost:8080",
     "secure": false,
     "changeOrigin": true
-  }
+  }   
 }
