--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Lasse",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "*",
     "body-parser": "^1.18.3",
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.4.4",
@@ -21,7 +22,9 @@
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.8",
-    "passport": "*"
+    "passport": "*",
+    "walk": "^2.3.14",
+    "walker": "^1.0.7"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
